# nunchuck

./: .SKILLS.md  .gitignore  AGENTS.md  CHANGELOG.md  INDEX.md  LICENSE  MIGRATION.md  README.md  nunchuck.toml  pyproject.toml
.cursor/commands/: algo-rpi-implement.md  algo-rpi-plan.md  algo-rpi-research.md  algo-rpi.md  changelog-init.md  changelog-release.md  changelog-update.md  changelog-verify.md  changelog.md  code-review.md  commit-message.md  doctor.md  dtx-forget.md  dtx-gather.md  dtx-state.md  dtx-validate.md  dtx.md  grape.md  md-merge.md  md-review.md  md-split.md  md.md  memory-bank.md  plan-create.md  plan-discuss.md  plan-exec.md  plan-review.md  plan-status.md  plan.md  prompt-compile.md  prompt-exec.md  prompt-forge.md  prompt.md  rpi-implement.md  rpi-plan.md  rpi-research.md  rpi.md  sniff-abusers.md  sniff-bloaters.md  sniff-couplers.md  (+8 more)
.plan/1/: plan.md
.prompt/: COMPACTED.md  PROMPT.md  active.yaml
.windsurf/workflows/: algo-rpi-full.md  algo-rpi-implement.md  algo-rpi-plan-reimagine.md  algo-rpi-plan-review.md  algo-rpi-plan.md  algo-rpi-research.md  algo-rpi.md  asi.md  brainstorm.md  changelog-init.md  changelog-release.md  changelog-update.md  changelog-verify.md  changelog.md  code-review.md  commit-message.md  doctor-exam.md  (+72 more)
benchmark/: README.md  codex.benchmark.toml
docs/: .INDEX.md  01_QUICKSTART.md  02_SKILLS.md  03_SKILLSETS.md  04_SCHEMAS.md  05_CONTRIBUTING.md  CLI.md  KICKOFF.md  QUICKSTART.md  SKILLS.md  SKILLSETS.md
index/: SKILL.md
plan/: SKILL.md
scripts/: README.md  install.ps1  install.sh
skills/: INDEX.md
(+1124 files in other folders)
